--- a/tcm/modules/web/src/main/webapp/pages/advisor/adash.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/advisor/adash.xhtml
@@ -3,7 +3,7 @@
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
-                template="/template/common/invlayout.xhtml">
+                template="/template/common/template.xhtml">
 
     <f:metadata>
         <f:event type="preRenderView" listener="#{adashbean.preRenderView}"/>
@@ -19,7 +19,7 @@
                             <div class="Container20"><i class="fa fa-user Fs50 red Fleft MarRight10"></i></div>
                             <div class="Container80">
                                 <div class="Fright">
-                                    <h2 class="black Fs24 FontThemeMedium">#{uiportal.webutil.lastFirstName}</h2>
+                                    <h2 class="black Fs24 FontThemeMedium">#{webutil.lastFirstName}</h2>
                                 </div>
                             </div>
                         </div>
