--- a/tcm/modules/web/src/main/webapp/access-denied.xhtml
+++ b/tcm/modules/web/src/main/webapp/access-denied.xhtml
@@ -3,7 +3,7 @@
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
-                template="/template/common/invsimplelayout.xhtml">
+                template="/template/common/simple.xhtml">
 
     <ui:define name="content">
         <h:form>
