--- a/tcm/modules/web/src/main/webapp/pages/consumer/index.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/index.xhtml
@@ -1,79 +1,111 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:p="http://primefaces.org/ui"
+                template="/template/common/template.xhtml">
 
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:pe="http://primefaces.org/ui/extensions">
+    <f:metadata>
+        <f:event type="preRenderView" listener="#{cdash.preRenderView}"/>
+    </f:metadata>
 
-<h:head></h:head>
-<h:body>
-    <script type="text/javascript" src="/js/accountSelector.js"></script>
-    <ui:composition template="/template/common/backup/layout.xhtml/common/layout.xhtml">
-        <ui:define name="content">
+    <ui:define name="content">
 
-            <div id="main-content" class="content_section" style="background-color: #f5f5f5; padding: 2px;">
-                <div id="wrapper" class="container">
+        <h:form id="form">
+            <!-- BOX START -->
+            <div class="layout-portlets-box">
+                <div class="Container100 Responsive100"><!-- ROHIT's CHANGE -->
+                    <div class="ContainerIndent">
+                        <div class="Container100">
 
-                    <h:form>
-                        <p:dataTable id="investment" var="investment" value="#{manageAccountBean.manageAccountList}">
-                            <f:facet name="header" style="text-align: left">
-                                <p:column>
-                                    <p:commandButton value="Add Portfolio" icon="ui-icon-plus"
-                                                     disabled="#{manageAccountBean.anyPending}"
-                                                     action="#{manageAccountBean.addPortfolio}"
-                                                     process="@this" immediate="true"/>
-                                </p:column>
-                            </f:facet>
-                            <p:column style="width:10%">
-                                <p:commandButton id="selectButton" process="@this" immediate="true"
-                                                 value="#{investment.action}" icon="#{investment.actionIcon}"
-                                                 action="#{manageAccountBean.doSelectedAction}">
-                                    <f:setPropertyActionListener value="#{investment}"
-                                                                 target="#{manageAccountBean.selectedInvestment}"/>
-                                </p:commandButton>
-                            </p:column>
-                            <p:column sortBy="#{investment.goal}" headerText="Goal"
-                                      style="width:15%; text-align: left"
-                                      resizable="true">
-                                <h:outputText value="#{investment.goal}"/>
-                            </p:column>
-
-                            <p:column sortBy="#{investment.acctstate}" headerText="Status"
-                                      style="width:15%; text-align: left"
-                                      resizable="true">
-                                <h:outputText value="#{investment.acctstate}"/>
-                            </p:column>
-
-                            <p:column sortBy="#{investment.displayAcctNum}" headerText="Account#"
-                                      style="width:10%; text-align: left"
-                                      resizable="true">
-                                <h:outputText value="#{investment.displayAcctNum}"/>
-                            </p:column>
-
-
-                            <p:column headerText="Action" style="width:20%; text-align: left"
-                                      resizable="true">
-                                <p:selectOneMenu value="#{manageAccountBean.actionSelected}"
-                                                 styleClass="invSelectOneMenu"
-                                                 onchange="this.form.submit()"
-                                                 valueChangeListener="#{manageAccountBean.selectedActionEvent}">
-                                    <f:selectItem itemLabel="- Choose one -" itemValue="-"/>
-                                    <f:selectItems value="#{investment.choices.entrySet()}"
-                                                   var="entry" itemLabel="#{entry.key}" itemValue="#{entry.value}"/>
-                                </p:selectOneMenu>
-                            </p:column>
-                        </p:dataTable>
-
-                    </h:form>
-
+                            <div class="DispInlBlock MarTop20">
+                                <div class="Container20"><i class="fa fa-user Fs50 red Fleft MarRight10"></i></div>
+                                <div class="Container80">
+                                    <div class="Fright">
+                                        <h2 class="black head FontThemeMedium">#{webutil.lastFirstName}</h2>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="Seperator"></div>
+                        </div>
+                    </div>
                 </div>
-            </div>
+                <div class="Container50 Responsive100">
+                    <div class="ContainerIndent">
+                        <div class="Container100">
+                        </div>
+                    </div>
+                </div>
+                <div class="Container100 Responsive100">
+                    <div class="ContainerIndent">
+                        <div class="Container100 tp1">
 
-        </ui:define>
-    </ui:composition>
-</h:body>
-</html>
+                            <p:dataTable id="singleDT" var="investment" value="#{cdash.manageAccountList}"
+                                         emptyMessage="No account were created.  Use new application to add account."
+                                         reflow="true">
+
+                                <p:column styleClass="Wid10 TextAlLeft">
+                                    <p:commandButton id="activeButton" rendered="#{investment.managed}"
+                                                     styleClass="Fs14 GreenButton"
+                                                     process="@this" immediate="true"
+                                                     icon="fa fa-search-plus Fs14 white"
+                                                     action="#{cdash.doSelectedAction}">
+                                        <p:tooltip id="activeToolTipFade" for="activeButton" value="View"/>
+                                        <f:setPropertyActionListener value="#{investment}"
+                                                                     target="#{cdash.selectedAccount}"/>
+                                    </p:commandButton>
+                                    <p:commandButton id="pendingButton" rendered="#{! investment.managed}"
+                                                     styleClass="Fs14 BlueButton"
+                                                     process="@this" immediate="true"
+                                                     icon="fa fa-pencil-square-o Fs14 white"
+                                                     action="#{cdash.doSelectedAction}">
+                                        <p:tooltip id="pendingToolTipFade" for="pendingButton" value="Edit"/>
+                                        <f:setPropertyActionListener value="#{investment}"
+                                                                     target="#{cdash.selectedAccount}"/>
+                                    </p:commandButton>
+                                </p:column>
+                                <p:column styleClass="Wid20 TextAlLeft"
+                                          sortBy="#{investment.portfolioName}" headerText="Portfolio" priority="2"
+                                          resizable="true">
+                                    <h:outputText value="#{investment.portfolioName}"/>
+                                </p:column>
+
+                                <p:column styleClass="Wid25 TexAlLeft"
+                                          sortBy="#{investment.goal}" headerText="Type" priority="3"
+                                          resizable="true">
+                                    <h:outputText value="#{investment.goal}"/>
+                                </p:column>
+
+                                <p:column styleClass="Wid20 TexAlLeft"
+                                          sortBy="#{investment.displayActiveAcctNum}" headerText="Account#"
+                                          resizable="true">
+                                    <h:outputText value="#{investment.displayActiveAcctNum}"/>
+                                </p:column>
+
+                                <p:column styleClass="Wid25 num-text-align invest"
+                                          headerText="Invested"
+                                          resizable="true"><!-- ROHIT's CHANGE -->
+                                    <h:outputText value="#{investment.actualInvestment}" rendered="#{investment.managed}">
+                                        <f:convertNumber currencySymbol="$" type="currency"/>
+                                    </h:outputText>
+                                    <h:outputText value="#{investment.initialInvestment}" rendered="#{! investment.managed}">
+                                        <f:convertNumber currencySymbol="$" type="currency"/>
+                                    </h:outputText>
+
+                                </p:column>
+
+                            </p:dataTable>
+
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Can add another element here... -->
+            </div>
+            <!-- BOX END -->
+        </h:form>
+
+
+    </ui:define>
+
+</ui:composition>
