--- a/tcm/modules/web/src/main/webapp/register.xhtml
+++ b/tcm/modules/web/src/main/webapp/register.xhtml
@@ -3,7 +3,7 @@
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
-                template="/template/common/invsimplelayout.xhtml">
+                template="/template/common/simple.xhtml">
 
     <f:metadata>
         <f:viewParam name="u" value="#{userBean.beanUserID}"/>
@@ -18,7 +18,7 @@
                 <div class="Container90 Fnone MarAuto TexAlCenter">
                     <div class="EmptyBox20"></div>
                     <h:form>
-                        <h:graphicImage id="logo" name="#{uiportal.logo}" styleClass="Fleft" library="invessence"
+                        <h:graphicImage id="logo" name="#{uiLayout.logo}" styleClass="Fleft" library="invessence"
                                         class="MarAuto MarTop20 MarBot10" style="height: 40px"/>
 
                         <h:inputHidden value="#{userBean.beanUserID}" styleClass="Wid90"/>
