--- a/tcm/modules/web/src/main/webapp/access-denied.xhtml
+++ b/tcm/modules/web/src/main/webapp/access-denied.xhtml
@@ -22,7 +22,7 @@
                             <div class="EmptyBox30"></div>
                             <h:commandButton styleClass="Fs16 RedButton"
                                              type="submit" value="OK"
-                                             action="#{menu.redirectStartPage}"/>
+                                             action="#{uiLayout.defaultHome}"/>
                         </h:form>
                         <div class="EmptyBox50"></div>
                     </div>
