--- a/tcm/modules/web/src/main/webapp/message.xhtml
+++ b/tcm/modules/web/src/main/webapp/message.xhtml
@@ -43,7 +43,7 @@
                     </div>
                     <div class="Container90 TexAlCenter">
                         <p:commandButton value="OK"
-                                         actionListener="#{menu.redirectStartPage}"/>
+                                         actionListener="#{uiLayout.defaultHome}"/>
                     </div>
                     <div class="EmptyBox20"></div>
                 </div>
