--- a/tcm/modules/web/src/main/webapp/pages/consumer/funding-none.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/funding-none.xhtml
@@ -55,11 +55,11 @@
                             <h3>Questions? Talk to one of our product specialists.</h3>
                             <br/>
                             <img src="/images/telephone_call_contact.png" alt="Phone" style="height: 18px;"/>
-                            Phone: #{menu.phone}
+                            Phone: #{uiLayout.uiprofile.mainphone}
                             <br/>
                             <a href="mailto:info@invessence.com">
                                 <img src="/images/email_envelope.png" alt="Email" style="height: 18px;"/>
-                                Email: #{menu.email}
+                                Email: #{uiLayout.uiprofile.supportemail}
                             </a>
 
                             <div class="EmptyBox20"/>
