--- a/tcm/modules/web/src/main/webapp/404.xhtml
+++ b/tcm/modules/web/src/main/webapp/404.xhtml
@@ -17,7 +17,7 @@
                     <span class="Wid100 DispBlock Fs18 red">Sorry, but the resource you are looking <br/> for has not been found.<br/>
                     </span>
                     <div class="EmptyBox30"></div>
-                    <p:button  value="OK" styleClass="Fs16 RedButton" action="#{menu.redirectStartPage}"/>
+                    <p:button  value="OK" styleClass="Fs16 RedButton" action="#{uiLayout.defaultHome}"/>
                     <div class="EmptyBox50"></div>
                 </div>
             </div>
