--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/final.xhtml
@@ -23,7 +23,8 @@
                 <div class="ContainerIndent">
                     <div class="Container100 Fleft">
                         <p:outputPanel deferred="true">
-                            <p:chart type="bar" model="#{tcmpb.charts.barChart}" rendered="#{tcmpb.charts.barChart != null}"
+                            <p:chart type="pie" model="#{tcmpb.charts.pieChart}"
+                                     rendered="#{tcmpb.charts.pieChart != null}"
                                      responsive="true"/>
                         </p:outputPanel>
                     </div>
