--- a/ltam/modules/web/src/main/webapp/pages/try/index.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/try/index.xhtml
@@ -16,9 +16,10 @@
 <div class="layout-portlets-box">
 
    
-        <div class="Container100 Responsive100 ">
-            <div class="ContainerIndent Responsive100 tab_main">
-            		
+        <div class="Container100">
+            <div class="UIstepsSevenP">
+            <div class="ContainerIndent">
+
                             <p:steps id="ltamprogressbar" activeIndex="#{ltamprofile.ltammenu}">
                                 <p:menuitem value="Start"/>
                                 <p:menuitem value="Goal" />
@@ -28,7 +29,8 @@
                                 <p:menuitem value="Risk"/>
                                 <p:menuitem value="Review"/>
                             </p:steps>
-                          
+
+           </div>
            </div>
             <div class="Container100 Responsive100">
                 <div class="ContainerIndent Responsive100">
