--- a/ltam/modules/web/src/main/webapp/signup2.xhtml
+++ b/ltam/modules/web/src/main/webapp/signup2.xhtml
@@ -105,7 +105,7 @@
                                     <div class="ContainerIndent">
                                         <p:commandButton value="Next" ajax="true"
                                                          update=":signup2Form:profilegrowl"
-                                                         actionListener="#{userBean.saveUser}"/>
+                                                         actionListener="#{userBean.acceptQA}"/>
                                     </div>
                                 </div>
                             </p:panel>
