--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/cEdit.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/cEdit.xhtml
@@ -23,7 +23,7 @@
 
         <div class="Container100">
             <div class="ContainerIndent">
-                <p:messages showDetail="true" sticky="true" escape="true"/>
+                <p:messages showDetail="false" sticky="true" escape="true" closable="true"/>
                 <ui:fragment rendered="#{tcmpb.pagemanager.page == 0}">
                     <ui:include src="/pages/consumer/tcm/cadd/p1.xhtml"/>
                 </ui:fragment>
