--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p1.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p1.xhtml
@@ -40,7 +40,7 @@
             <h3>
             I plan on investing
             <pe:inputNumber styleClass="invInputText input_investwid1" style="padding:0px!important;"
-                          value="#{tcmpb.investment}"
+                          value="#{tcmpb.initialInvestment}"
                           maxlength="11" decimalPlaces="0" symbol="$"
                     required="true" requiredMessage="Investment is required!"
                     validatorMessage="Min. of $500 investment is required!">
