--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p4.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p4.xhtml
@@ -16,29 +16,29 @@
             <div class="Container100 TexAlCenter">
 
                 <a href="#">
-                    <img src="/images/riskMeter.svg"
-                         onmouseover="this.src='/images/SriskMeter.svg'"
-                         onmouseout="this.src='/images/riskMeter.svg'" />
+                    <img src="/images/gainloss1.png"
+                         onmouseover="this.src='/images/gainloss1.png'"
+                         onmouseout="this.src='/images/mogainloss1.png'" />
                 </a>
                 <a href="#">
-                    <img src="/images/riskMeter.svg"
-                         onmouseover="this.src='/images/SriskMeter.svg'"
-                         onmouseout="this.src='/images/riskMeter.svg'" />
+                    <img src="/images/gainloss2.png"
+                         onmouseover="this.src='/images/gainloss2.png'"
+                         onmouseout="this.src='/images/mogainloss2.png'" />
                 </a>
                 <a href="#">
-                    <img src="/images/riskMeter.svg"
-                         onmouseover="this.src='/images/SriskMeter.svg'"
-                         onmouseout="this.src='/images/riskMeter.svg'" />
+                    <img src="/images/gainloss3.png"
+                         onmouseover="this.src='/images/gainloss3.png'"
+                         onmouseout="this.src='/images/mogainloss3.png'" />
                 </a>
                 <a href="#">
-                    <img src="/images/riskMeter.svg"
-                         onmouseover="this.src='/images/SriskMeter.svg'"
-                         onmouseout="this.src='/images/riskMeter.svg'" />
+                    <img src="/images/gainloss4.png"
+                         onmouseover="this.src='/images/gainloss4.png'"
+                         onmouseout="this.src='/images/mogainloss4.png'" />
                 </a>
                 <a href="#">
-                    <img src="/images/riskMeter.svg"
-                         onmouseover="this.src='/images/SriskMeter.svg'"
-                         onmouseout="this.src='/images/riskMeter.svg'" />
+                    <img src="/images/gainloss5.png"
+                         onmouseover="this.src='/images/gainloss5.png'"
+                         onmouseout="this.src='/images/mogainloss5.png'" />
                 </a>
 
             </div>
