--- a/tcm/modules/web/src/main/webapp/pages/consumer/addon/q4.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/addon/q4.xhtml
@@ -11,15 +11,15 @@
             <h3>
                 4. What level of investment risk are you willing to take?
             </h3>
-            <p:selectOneRadio value="#{cepb.selectedchoice4}"
+            <p:selectOneRadio value="#{cepb.riskCalculator.ans4}"
                               layout="pageDirection">
                 <p:ajax listener="#{cepb.onChangeValue}"
                         update=":ceForm:workArea, :ceForm:graphArea"/>
-                <f:selectItem itemLabel="Highest." itemValue="0" />
-                <f:selectItem itemLabel="High." itemValue="1" />
-                <f:selectItem itemLabel="Moderate." itemValue="2" />
-                <f:selectItem itemLabel="Low." itemValue="3" />
-                <f:selectItem itemLabel="Lowest." itemValue="4" />
+                <f:selectItem itemLabel="Highest." itemValue="1" />
+                <f:selectItem itemLabel="High." itemValue="2" />
+                <f:selectItem itemLabel="Moderate." itemValue="3" />
+                <f:selectItem itemLabel="Low." itemValue="4" />
+                <f:selectItem itemLabel="Lowest." itemValue="5" />
             </p:selectOneRadio>
         </div>
     </div>
