--- a/tcm/modules/web/src/main/webapp/pages/consumer/addon/q6.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/addon/q6.xhtml
@@ -11,14 +11,14 @@
             <h3>
                 6. What level of volatility are you prepared to accept?
             </h3>
-            <p:selectOneRadio value="#{cepb.selectedchoice6}"
+            <p:selectOneRadio value="#{cepb.riskCalculator.ans6}"
                               layout="pageDirection">
                 <p:ajax listener="#{cepb.onChangeValue}"
                         update=":ceForm:workArea, :ceForm:graphArea"/>
-                <f:selectItem itemLabel="High – I am comfortable with volatility." itemValue="0" />
-                <f:selectItem itemLabel="Moderate – Up to half volatile and half balanced." itemValue="1" />
-                <f:selectItem itemLabel="Medium – Stable annual return with low volatility." itemValue="2" />
-                <f:selectItem itemLabel="None – No volatility." itemValue="3" />
+                <f:selectItem itemLabel="High – I am comfortable with volatility." itemValue="1" />
+                <f:selectItem itemLabel="Moderate – Up to half volatile and half balanced." itemValue="2" />
+                <f:selectItem itemLabel="Medium – Stable annual return with low volatility." itemValue="3" />
+                <f:selectItem itemLabel="None – No volatility." itemValue="4" />
             </p:selectOneRadio>
         </div>
     </div>
