--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p3.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p3.xhtml
@@ -11,7 +11,7 @@
             <h3>
                 Which of the following best reflects your expectations for this investment?
             </h3>
-            <p:selectOneRadio value="#{tcmpb.selectedchoice1}"
+            <p:selectOneRadio value="#{tcmpb.riskCalculator.ans3}"
                               layout="pageDirection"
                               required="true" requiredMessage="Please choose one of these choices">
                 <f:selectItem itemLabel="Maximize Current Income" itemValue="1" />
