--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p4.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p4.xhtml
@@ -12,34 +12,44 @@
                 Select the option that matches your comfort zone to continue.
             </h3>
 
+            <h:inputHidden value="#{tcmpb.riskCalculator.ans4}"
+                           required="true"
+                           requiredMessage="Please click on one of the images below to select appropriate risk."/>
+
             <div class="EmptyBox20"></div>
             <div class="Container100 TexAlCenter">
 
-                <a href="#">
-                    <img src="/images/gainloss1.png"
-                         onmouseover="this.src='/images/gainloss1.png'"
-                         onmouseout="this.src='/images/mogainloss1.png'" />
-                </a>
-                <a href="#">
-                    <img src="/images/gainloss2.png"
-                         onmouseover="this.src='/images/gainloss2.png'"
-                         onmouseout="this.src='/images/mogainloss2.png'" />
-                </a>
-                <a href="#">
-                    <img src="/images/gainloss3.png"
-                         onmouseover="this.src='/images/gainloss3.png'"
-                         onmouseout="this.src='/images/mogainloss3.png'" />
-                </a>
-                <a href="#">
-                    <img src="/images/gainloss4.png"
-                         onmouseover="this.src='/images/gainloss4.png'"
-                         onmouseout="this.src='/images/mogainloss4.png'" />
-                </a>
-                <a href="#">
-                    <img src="/images/gainloss5.png"
-                         onmouseover="this.src='/images/gainloss5.png'"
-                         onmouseout="this.src='/images/mogainloss5.png'" />
-                </a>
+                <p:panel id="riskimgpanel" styleClass="Container100"
+                         style="border: 0px; background: transparent;">
+                    <p:commandLink actionListener="#{tcmpb.riskCalculator.setAnswer(4,1)}"
+                            update=":ceForm:riskimgpanel">
+                        <img src="#{tcmpb.getRiskGraphic(1)}"
+                             class="riskImage"/>
+                    </p:commandLink>
+
+                    <p:commandLink actionListener="#{tcmpb.riskCalculator.setAnswer(4,2)}"
+                                   update=":ceForm:riskimgpanel">
+                        <img src="#{tcmpb.getRiskGraphic(2)}"
+                             class="riskImage"/>
+                    </p:commandLink>
+
+                    <p:commandLink actionListener="#{tcmpb.riskCalculator.setAnswer(4,3)}"
+                                   update=":ceForm:riskimgpanel">
+                        <img src="#{tcmpb.getRiskGraphic(3)}"
+                             class="riskImage"/>
+                    </p:commandLink>
+
+                    <p:commandLink actionListener="#{tcmpb.riskCalculator.setAnswer(4,4)}"
+                                   update=":ceForm:riskimgpanel">
+                        <img src="#{tcmpb.getRiskGraphic(4)}"
+                             class="riskImage"/>
+                    </p:commandLink>
+
+                    <p:commandLink actionListener="#{tcmpb.riskCalculator.setAnswer(4,5)}"
+                                   update=":ceForm:riskimgpanel">
+                        <img src="#{tcmpb.getRiskGraphic(5)}"
+                             class="riskImage"/>
+                    </p:commandLink>
 
             </div>
 
