--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p4.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p4.xhtml
@@ -50,6 +50,7 @@
                         <img src="#{tcmpb.getRiskGraphic(5)}"
                              class="riskImage"/>
                     </p:commandLink>
+                </p:panel>
 
             </div>
 
